fixed some spacing

--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ span {
   align-content: left;
   width: 80%;
   height: 42%;
-  margin: 5% 10% 0 10%;
+  margin: 4.5% 10% 0 10%;
   font-family: 'Quicksand', sans-serif;
   box-shadow: 0 0.5vh 1vh 0 rgba(0,0,0,0.2);
   overflow: hidden;
@@ -87,7 +87,7 @@ span {
   flex-direction: column;
   flex-wrap: wrap;
   align-content: left;
-  width: 80%;
+  width: 100%;
   height: 100%;
   line-height: 2.5vh;
 }
